// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepared_xacts.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 366,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "foobar",
                "is_local": true,
                "location": 375,
                "typeName": {
                  "location": 382,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "varchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 10,
                        },
                        "location": 390,
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "aaa",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 65,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 49,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 8,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 20,
                "name": "foobar",
                "val": {
                  "A_Const": {
                    "location": 29,
                    "sval": {
                      "sval": "bbb",
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "foobar",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 48,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 50,
                  "sval": {
                    "sval": "aaa",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo1",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 56,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 47,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 47,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo1",
          "kind": "TRANS_STMT_ROLLBACK_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 61,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 45,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 29,
                          "sval": {
                            "sval": "ddd",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo2",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo2",
          "kind": "TRANS_STMT_COMMIT_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 59,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 43,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 8,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 20,
                "name": "foobar",
                "val": {
                  "A_Const": {
                    "location": 29,
                    "sval": {
                      "sval": "eee",
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "foobar",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 48,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 50,
                  "sval": {
                    "sval": "ddd",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo3",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 36,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 20,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 29,
                          "sval": {
                            "sval": "fff",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo3",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo3",
          "kind": "TRANS_STMT_ROLLBACK_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 72,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 56,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 8,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 20,
                "name": "foobar",
                "val": {
                  "A_Const": {
                    "location": 29,
                    "sval": {
                      "sval": "eee",
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "foobar",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 48,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 50,
                  "sval": {
                    "sval": "ddd",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo4",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 36,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 20,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 76 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 90,
            "relname": "pxtest1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 106,
                          "sval": {
                            "sval": "fff",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo5",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo4",
          "kind": "TRANS_STMT_ROLLBACK_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pxtest1",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 93 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 25,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_advisory_lock",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 94 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 37,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_advisory_xact_lock_shared",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 95 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "foo6",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 95 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 70,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 54,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 16,
            "relname": "pxtest2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 25,
                "typeName": {
                  "location": 27,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 100 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pxtest2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 31,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 101 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_SAVEPOINT",
          "savepoint_name": "a",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 102 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 17,
            "relname": "pxtest2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 33,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 103 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK_TO",
          "savepoint_name": "a",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 104 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_SAVEPOINT",
          "savepoint_name": "b",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 105 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pxtest2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 31,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "regress-one",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pxtest3",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "fff",
                "is_local": true,
                "location": 23,
                "typeName": {
                  "location": 27,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "A_Const": {
                    "location": 64,
                    "sval": {
                      "sval": "serializable",
                    },
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "transaction_isolation",
                "location": 48,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 112 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pxtest3",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 113 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 16,
            "relname": "pxtest4",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 25,
                "typeName": {
                  "location": 27,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 114 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pxtest4",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 31,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 115 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pxtest4",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 31,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 116 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 40,
                    "relname": "pxtest4",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 117 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 1,
          "portalname": "foo",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 119 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "regress-two",
          "kind": "TRANS_STMT_PREPARE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 120 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 1,
          "portalname": "foo",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 123 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 79,
                "relname": "pxtest2",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 72,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 72,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 126 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 63,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 54,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 129 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 132 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "LockStmt": {
          "mode": 1,
          "nowait": true,
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 12,
                "relname": "pxtest3",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 133 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 134 1`] = `[Error: syntax error at or near "\\"]`;

exports[`prepared_xacts.sql > line 140 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 143 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "LockStmt": {
          "mode": 1,
          "nowait": true,
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 12,
                "relname": "pxtest3",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 144 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 145 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "regress-one",
          "kind": "TRANS_STMT_COMMIT_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 148 1`] = `[Error: syntax error at or near "\\"]`;

exports[`prepared_xacts.sql > line 150 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 62,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 53,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 53,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 153 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "gid": "regress-two",
          "kind": "TRANS_STMT_COMMIT_PREPARED",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 156 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "pxtest3",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 157 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 62,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 53,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "gid",
                        },
                      },
                    ],
                    "location": 53,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 160 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pxtest2",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 163 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pxtest3",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepared_xacts.sql > line 163 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pxtest4",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
